Tab content updated.

--- a/src/javascript/DatatablesJSSample/tabbed-table-setup.html
+++ b/src/javascript/DatatablesJSSample/tabbed-table-setup.html
@@ -34,17 +34,17 @@
                         <div class="card-body">
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link active" id="football-fixtures-tab" data-toggle="tab" href="#football-fixtures-tab-content" role="tab" aria-controls="home" aria-selected="true">Home</a>
+                                    <a class="nav-link active" id="football-fixtures-tab" data-toggle="tab" href="#football-fixtures-tab-content" role="tab" aria-controls="football-fixtures-tab-content" aria-selected="true">Football Fixtures</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="festivals-tab" data-toggle="tab" href="#festivals-tab-content" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+                                    <a class="nav-link" id="festivals-tab" data-toggle="tab" href="#festivals-tab-content" role="tab" aria-controls="food-festivals-tab-content" aria-selected="false">Food Festivals</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="martial-artists-tab" data-toggle="tab" href="#martial-artists-tab-content" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+                                    <a class="nav-link" id="martial-artists-tab" data-toggle="tab" href="#martial-artists-tab-content" role="tab" aria-controls="martial-artists-tab-content" aria-selected="false">Martial Artists</a>
                                 </li>
                             </ul>
                             <div class="tab-content" id="myTabContent">
-                                <div class="tab-pane fade show active" id="football-fixtures-tab-content" role="tabpanel" aria-labelledby="home-tab">
+                                <div class="tab-pane fade show active" id="football-fixtures-tab-content" role="tabpanel" aria-labelledby="football-fixtures-tab">
                                     <table id="football-fixtures" class="table">
                                         <thead>
                                             <tr>
@@ -98,7 +98,7 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                <div class="tab-pane fade" id="festivals-tab-content" role="tabpanel" aria-labelledby="profile-tab">
+                                <div class="tab-pane fade" id="food-festivals-tab-content" role="tabpanel" aria-labelledby="food-festivals-tab">
                                     <table id="food-festivals" class="table">
                                         <thead>
                                             <tr>
@@ -140,7 +140,7 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                <div class="tab-pane fade" id="martial-artists-tab-content" role="tabpanel" aria-labelledby="contact-tab">
+                                <div class="tab-pane fade" id="martial-artists-tab-content" role="tabpanel" aria-labelledby="martial-artists-tab">
                                     <table id="martial-artists" class="table">
                                         <thead>
                                             <tr>
