Tidying up the sample with a first round of comments.
A first bout of comments. I'll follow this up with a few other rounds, as time allows.

--- a/src/javascript/DatatablesJSSample/multi-tables.html
+++ b/src/javascript/DatatablesJSSample/multi-tables.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiple Table Setup</title>
+    <!--Bootstrap/Fontawesome - included simply to make the sample more 'complete'-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <!--An abstraction available for any additional styling (again, not the primary purpose of this sample, but nice to have on hand)-->
     <link rel="stylesheet" href="css/table-example.css">
+    <!--jQuery as required by datatables.js-->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+    <!--Physical datatables.js script reference, which is the library we are adding support to-->
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <!--Sample module code on show, along with some JS to register/configure tables-->
     <script type="text/javascript" src="js/datatable-module.js"></script>
     <script type="text/javascript" src="js/multi-tables.js"></script>
 </head>
