--- a/src/javascript/DatatablesJSSample/tabbed-table-setup.html
+++ b/src/javascript/DatatablesJSSample/tabbed-table-setup.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <title>Tabbed Table Setup</title>
+    <!--Bootstrap/Fontawesome - included simply to make the sample more 'complete'-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <!--An abstraction available for any additional styling (again, not the primary purpose of this sample, but nice to have on hand)-->
     <link rel="stylesheet" href="css/table-example.css">
+    <!--jQuery/Bootstrap JS support (as required by datatables.js and Bootstrap tabs)-->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!--Physical datatables.js script reference, which is the library we are adding support to-->
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <!--Sample module code on show, along with some JS to register/configure tables-->
     <script type="text/javascript" src="js/datatable-module.js"></script>
     <script type="text/javascript" src="js/tabbed-table-setup.js"></script>
 </head>
