Fixes to Unix time for all examples
data-sort requires a distinct configuration, so Unix timestamp works quite nicely as far as ordering goes.

--- a/src/javascript/DatatablesJSSample/tabbed-table-setup.html
+++ b/src/javascript/DatatablesJSSample/tabbed-table-setup.html
@@ -66,7 +66,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>Norwich City FC vs Manchester United FC</td>
-                                                <td>6th Sept 2020</td>
+                                                <td data-sort="1599350400">6th September 2020</td>
                                                 <td>Yes</td> 
                                                 <td>
                                                     <button type="button" class="btn btn-primary float-right">Edit Fixture</button>
@@ -74,7 +74,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Manchester City FC vs Norwich City FC</td>
-                                                <td>31st August 2020</td>
+                                                <td data-sort="1598832000">31st August 2020</td>
                                                 <td>No</td> 
                                                 <td>
                                                     <button type="button" class="btn btn-primary float-right">Edit Fixture</button>
@@ -82,7 +82,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Arsenal FC vs Liverpool FC</td>
-                                                <td>12th September 2020</td>
+                                                <td data-sort="1599868800">12th September 2020</td>
                                                 <td>No</td> 
                                                 <td>
                                                     <button type="button" class="btn btn-primary float-right">Edit Fixture</button>
@@ -90,7 +90,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Liverpool FC vs Southampton FC</td>
-                                                <td>30th July 2020</td>
+                                                <td data-sort="1596067200">30th July 2020</td>
                                                 <td>Yes</td> 
                                                 <td>
                                                     <button type="button" class="btn btn-primary float-right">Edit Fixture</button>
@@ -98,7 +98,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Liverpool FC vs Norwich City FC</td>
-                                                <td>15th August 2020</td>
+                                                <td data-sort="1597449600">15th August 2020</td>
                                                 <td>Yes</td> 
                                                 <td>
                                                     <button type="button" class="btn btn-primary float-right">Edit Fixture</button>
@@ -122,7 +122,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>Mulbarton Food Festival</td>
-                                                <td>12th April 2021</td>
+                                                <td data-sort="1618185600">12th April 2021</td>
                                                 <td>Vegan Food</td> 
                                                 <td>Yes</td>
                                                 <td>
@@ -131,7 +131,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Grand Tea Party</td>
-                                                <td>1st March 2021</td>
+                                                <td data-sort="1614556800">1st March 2021</td>
                                                 <td>Dainty Sandwiches</td>
                                                 <td>No</td> 
                                                 <td>
@@ -140,7 +140,7 @@
                                             </tr>
                                             <tr>
                                                 <td>BBQ Delights</td>
-                                                <td>12th September 2020</td>
+                                                <td data-sort="1599868800">12th September 2020</td>
                                                 <td>BBQ Food</td>
                                                 <td>Yes</td> 
                                                 <td>
