--- a/src/javascript/DatatablesJSSample/multi-tables.html
+++ b/src/javascript/DatatablesJSSample/multi-tables.html
@@ -117,7 +117,7 @@
                                 <tbody>
                                     <tr>
                                         <td>Mulbarton Food Festival</td>
-                                        <td>12th April 2021</td>
+                                        <td data-sort="1618185600">12th April 2021</td>
                                         <td>Vegan Food</td> 
                                         <td>Yes</td>
                                         <td>
@@ -126,7 +126,7 @@
                                     </tr>
                                     <tr>
                                         <td>Grand Tea Party</td>
-                                        <td>1st March 2021</td>
+                                        <td data-sort="1614556800">1st March 2021</td>
                                         <td>Dainty Sandwiches</td>
                                         <td>No</td> 
                                         <td>
@@ -135,7 +135,7 @@
                                     </tr>
                                     <tr>
                                         <td>BBQ Delights</td>
-                                        <td>12th September 2020</td>
+                                        <td data-sort="1599868800">12th September 2020</td>
                                         <td>BBQ Food</td>
                                         <td>Yes</td> 
                                         <td>
