--- a/src/javascript/DatatablesJSSample/tabbed-table-setup.html
+++ b/src/javascript/DatatablesJSSample/tabbed-table-setup.html
@@ -44,7 +44,7 @@
                                     <a class="nav-link active" id="football-fixtures-tab" data-toggle="tab" href="#football-fixtures-tab-content" role="tab" aria-controls="football-fixtures-tab-content" aria-selected="true">Football Fixtures</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="festivals-tab" data-toggle="tab" href="#festivals-tab-content" role="tab" aria-controls="food-festivals-tab-content" aria-selected="false">Food Festivals</a>
+                                    <a class="nav-link" id="festivals-tab" data-toggle="tab" href="#food-festivals-tab-content" role="tab" aria-controls="food-festivals-tab-content" aria-selected="false">Food Festivals</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" id="martial-artists-tab" data-toggle="tab" href="#martial-artists-tab-content" role="tab" aria-controls="martial-artists-tab-content" aria-selected="false">Martial Artists</a>
